# cargo-cooldown

./: Cargo.toml  README.md
examples/: .gitignore  cooldown-allowlist.toml  run.sh  test.sh
examples/demo/: Cargo.toml  cooldown.toml
examples/demo/src/: main.rs
src/: allowlist.rs  cache.rs  config.rs  executor.rs  main.rs  metadata.rs  registry.rs  resolver.rs
